# Solana

./: .gitignore  Dockerfile  NOTIFICATIONS_README.md  Procfile  README.md  Taskfile.yml  biome.json  package.json
.github/prompts/: solana-rust-expert.md
.github/workflows/: build-solana-program.sh
.husky/: pre-commit
.husky/scripts/: build-solana-program.sh
apps/dashboard/: .eslintrc.json  components.json  firebase.ts  package.json
apps/dashboard/@types/: escrow.entity.ts  issue.entity.ts  role-actions.ts  trustline.entity.ts  user.entity.ts  video.entity.ts
apps/dashboard/app/: global.css  layout.tsx  page.tsx
apps/dashboard/hooks/: layout-dashboard.hook.ts  mobile.hook.ts  notifications.hook.ts  toast.hook.ts
apps/dashboard/lib/: socket.ts  solana-wallet.ts  stellar-wallet-kit.ts
apps/dashboard/providers/: MoonpayClientProvider.tsx
apps/dashboard/services/: notifications.api.ts
apps/server/: .env.example  GIT_GUIDELINE.md  Procfile  README.md  buffer-layout.types.d.ts  eslint.config.mjs  package.json  tsconfig.json
apps/server/src/: main.ts  (+3 more)
apps/smart-contract/: .env.sample  Anchor.toml  Cargo.toml  README.md  build.sh  get-id.sh  package.json  target
apps/smart-contract/programs/token/: Cargo.toml
apps/smart-contract/programs/token/src/: constant.rs  error.rs  lib.rs  state.rs  utils.rs
apps/smart-contract/programs/token/src/instructions/: buy.rs  buy_with_stable_coin.rs  change_admin.rs  init_user.rs  initialize.rs  mod.rs  set_live.rs  set_stage.rs  set_vault_address.rs  start_token.rs
programs/solana-tl/: package.json  tsconfig.json
(+390 files in other folders)
